          FHT(x) = FFT(x).real - FFT(x).imag
      instead of the unusual convention of `r2r_separable_hartley` and
      `r2r_genuine_hartley`, which use
          FHT(x) = FFT(x).real + FFT(x).imag
      `r2r_separable_hartley` and `r2r_genuine_hartley` should not be used in
      new code, but they are kept for backwards compatibility.

- sht:
    - functions `synthesis`, `adjoint_synthesis`, `synthesis_deriv1`,
      and `pseudo_analysis`: introduce an optional integer parameter `mmax`
      and allow it to be different from `lmax` (`mmax==lmax` was implicitly
      assumed so far)

- nufft:
    - re-write core part of the 2D Type 1 NUFFT, which was miscompiled on some
      platforms. Unfortunately, the new implementation is slightly slower on
      x86-64.
    - allow very small uniform grid dimensions (down to 1)

- wgridder:
    - allow very small uniform grid dimensions (down to 2)


0.28.0:
- general:
    - allow control over multithreading via environment variables
      DUCC0_NUM_THREADS, DUCC0_PIN_DISTANCE, and DUCC0_PIN_OFFSET.
      This is still experimental and may change in the future.

- fft:
    - introduce a flag `allow_overwriting_input` to `c2r`, which can speed up
      execution by avoiding temporary arrays

- nufft/wgridder:
    - changed kernel database to hold optimized kernels depending on
      dimensionality and floating point accuracy. This allows for slightly
      better tuning and improves maximum attainable accuracy in 2D and 3D.

- julia:
    - start of a Julia wrapper, currently focused on FFT, NUFFT and SHT support

- math:
    - computations involving Peano-Hilbert indices are now much faster 

- misc:
    - new function `roll_resize_roll`, which allows efficient combined
      rolling/padding/truncation of arrays.


0.27.0:
- general:
  - modernize CI and build machinery
  - some code was moved from header files into .cc files to avoid duplicate
    symbols in some situations.

- nufft: